tests/toy/neg/001438_mutation.toylang
program a = { var a : int else; } .
